Mon Jan  5 17:50:02 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject3D): Do not
	call Mesh.buildGroupBoundaries(). See comment below, this method
	was not meant to be called by mesh readers, but by higher level
	routines.

Fri Dec 19 14:17:57 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: Make several
	methods package private, public methods are available from Mesh.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: In buildGroupBoundaries()
	and buildRidges(), make vertices non-manifold.  Make them manifold
	in scratchVirtualBoundaries().

Thu Dec 18 16:04:08 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: New buildGroupBoundaries()
	and buildRidges() methods.  The former adds virtual boundaries between
	triangles of different groups, and the latter adds virtual boundaries
	between triangles when their dihedral angle is greater than a
	parameter.  The new scratchVirtualBoundaries() method removes those
	virtual boundaries.
	These methods are meant to be explicitly called by algorithms,
	they are not called by mesh readers.

Wed Dec 17 14:29:39 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/TangentPlaneProjection.java:
	New class, this projection can be used instead of QuadricProjection.

Tue Dec 16 16:57:49 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/QuadricProjection.java: Make
	getLocalQuadric() more robust.  Middle points were added to try
	to avoid hyperbolic surfaces, they are now also added when linear
	system is singular.
	* src/org/jcae/mesh/amibe/projection/MeshLiaison.java: Fix return
	value of move() when a loop is detected.  This does not imply that
	projection fails, but that approximation is not accurate enough.
	In these cases, vertex is moved, thus true is returned.